The gap in the highlight and cover section is fixed. Overall looking of the card design and featured image is improved.

--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -265,6 +265,7 @@ body { margin: 0; font-family: Raleway, sans-serif; overflow: hidden; }
 .margin-right-40 { margin-right: 40px; }
 .margin-right-45 { margin-right: 45px; }
 .margin-right-50 { margin-right: 50px; }
+.margin-bottom-42 { margin-bottom: 42px; }
 .margin-left-5 { margin-left: 5px !important; }
 .margin-left-10 { margin-left: 10px !important; }
 .margin-left-15 { margin-left: 15px !important; }
@@ -320,8 +321,8 @@ body { margin: 0; font-family: Raleway, sans-serif; overflow: hidden; }
 
 .my-content { width: 100%; position: fixed; top: 55px; bottom: 0; overflow: auto; }
 .my-content-inner { min-width: 414px; margin-top: 5px; }
-.my-content-inner .session { padding:0px; overflow: hidden; }
-.my-content-inner .session .cover { margin-top:35px; padding-right:8px; padding-left:5px; padding-top: 15px; padding-bottom:15px }
+.my-content-inner .session { padding:0px; overflow: hidden; align-items:stretch; height: 100%;}
+.my-content-inner .session .cover { margin-top:35px; padding-right:8px; padding-left:8px; padding-top: 15px; padding-bottom:15px; align-items:stretch; height: 100%; }
 .my-content-inner .session .cover .column {padding-right:8px; padding-left:8px;}
 .my-content-auth { min-width: 414px; margin-left: 15px; margin-right: 15px; margin-top: 15px; }
 .my-loading-bar { position: fixed !important; top: 55px; left: 0px; width: 100%; z-index: 5000; }
@@ -399,7 +400,7 @@ h3.overlay-post-title.post-title.regular { position:absolute; z-index:3; top:50%
 
 #openedPost { max-height: 800px; padding-bottom:20px; }
 #post-content p { margin-top: 0 !important; }
-div.stretchy-wrapper { width: 100%; padding-bottom: 56.25%; /* 16:9 */ position: relative; }
+div.stretchy-wrapper { width: 100%; padding-bottom: 90%; /* 16:9 */ position: relative; }
 div.stretchy-wrapper > div { position: relative; }
 
 .bx { background: linear-gradient(rgba(0,0,0,0.1), rgba(0,0,0,0.2), rgba(0,0,0,0.4), rgba(0,0,0,0.5), rgba(0,0,0,0.7), rgba(0,0,0,75), rgba(0,0,0,85), rgba(0,0,0,9)); width:100px; height:100px; position: relative; -webkit-transition: background .5s ease-out; -moz-transition: background .5s ease-out; -o-transition: background .5s ease-out; transition: background .5s ease-out; }
@@ -436,6 +437,19 @@ md-dialog-container.mat-dialog-container { padding: 0px !important; overflow: hi
 .material-icons.md-dark.md-inactive { color: rgba(0, 0, 0, 0.26); }
 .material-icons.md-light { color: rgba(255, 255, 255, 1); }
 .material-icons.md-light.md-inactive { color: rgba(255, 255, 255, 0.3); }
+
+.inner-row {
+    justify-content: center;
+    align-items: stretch;
+}
+
+#twitter-feed {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    flex-direction: column;
+    height: 100%;
+}
 
 /* styling the html radio player generated automatically by its script */
 #MusesRadioPlayer-HTML5-player-0 { z-index: 15; float: right !important; margin-right: 350px; margin-top:6px; }
